// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card action area component renders a card action area 1`] = `
<div>
  <a
    class="MuiButtonBase-root MuiCardActionArea-root emotion-0"
    href="https://www.autodesk.com"
    tabindex="0"
  >
    Action
    <span
      class="MuiCardActionArea-focusHighlight emotion-1"
    />
    <span
      class="MuiTouchRipple-root emotion-2"
    />
  </a>
</div>
`;

exports[`card actions component renders a card actions 1`] = `
<div>
  <div
    class="MuiCardActions-root MuiCardActions-spacing emotion-0"
  >
    Action
  </div>
</div>
`;

exports[`card component renders a card 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root  DhigCard--appearance--default emotion-0"
  >
    Card body
  </div>
</div>
`;

exports[`card content component renders a card content 1`] = `
<div>
  <div
    class="MuiCardContent-root emotion-0"
  >
    Hello
  </div>
</div>
`;

exports[`card divider component renders 1`] = `
<div>
  <div
    class="DhigCard--divider"
  >
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light emotion-0"
    />
  </div>
</div>
`;

exports[`card media component renders a card media 1`] = `
<div>
  <div
    class="MuiCardMedia-root emotion-0"
    role="img"
    style="background-image: url(https://swc.autodesk.com/pharmacopeia/img/placeholders/960x640.png);"
  />
</div>
`;
